--- a/app/src/main/res/layout/layout_update_people.xml
+++ b/app/src/main/res/layout/layout_update_people.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.christophrrb.firebasetest.MainActivity">
+    android:padding="24dp">
 
     <EditText
-        android:id="@+id/name"
+        android:id="@+id/editName"
         android:layout_width="215dp"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -18,7 +17,7 @@
         tools:layout_editor_absoluteY="54dp" />
 
     <EditText
-        android:id="@+id/email"
+        android:id="@+id/editEmail"
         android:layout_width="215dp"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -26,18 +25,4 @@
         android:inputType="textEmailAddress"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="106dp" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="88dp"
-        android:layout_height="wrap_content"
-        android:text="@string/submit"
-        tools:layout_editor_absoluteX="147dp"
-        tools:layout_editor_absoluteY="180dp" />
-
-    <Button
-        android:id="@+id/viewPeopleButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/view_people" />
 </LinearLayout>
